--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.11",
+    "@types/redux-saga": "^0.10.5",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
+    "redux-saga": "^1.1.3",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -38,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.6"
   }
 }
