--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0"
   }
 }
